src/objects/Cricket_Player__c.object
<CustomObject>
    <description>Stores Individual Player related data.</description>
    <fields>
        <fullName>Actual_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores Team value for player.</description>
        <inlineHelpText>Stores Team value for player.</inlineHelpText>
        <label>Actual Team</label>
        <referenceTo>Cricket_Actual_Team__c</referenceTo>
        <relationshipLabel>Cricket Players</relationshipLabel>
        <relationshipName>Cricket_Players</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Player_Description__c</fullName>
        <description>Stores player&apos;s description including achievements etc,</description>
        <inlineHelpText>Stores player&apos;s description including achievements etc,</inlineHelpText>
        <label>Player&apos;s Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Player_Nationality__c</fullName>
        <description>Stores nationality of player.</description>
        <inlineHelpText>Stores nationality of player.</inlineHelpText>
        <label>Player&apos;s Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Indian</fullName>
                </value>
                <value>
                    <fullName>Overseas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Player_Type__c</fullName>
        <description>Stores type of player.</description>
        <inlineHelpText>Stores type of player</inlineHelpText>
        <label>Player Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Batsman</fullName>
                </value>
                <value>
                    <fullName>Bowler</fullName>
                </value>
                <value>
                    <fullName>All Rounder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Points__c</fullName>
        <description>Total Points</description>
        <inlineHelpText>Total Points</inlineHelpText>
        <label>Total Points</label>
        <summarizedField>Cricket_Match_Player_Statistics__c.Total_Points__c</summarizedField>
        <summaryForeignKey>Cricket_Match_Player_Statistics__c.Cricket_Player__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Cricket Player</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Player Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cricket Players</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>